--- a/produtos.css
+++ b/produtos.css
@@ -1,3 +1,6 @@
+body {
+	font-family: Arial, Helvetica, sans-serif
+}
 header {
     background: #a1a1a1f1;
     padding: 20px 0;
@@ -66,9 +69,13 @@ nav a:hover {
     margin: 10px 0 0;
 }
 footer {
-    background: #202020;
-    margin: auto;
+    text-align: center;
+    background: url("bg.jpg");
+    padding: 40px 0;
 }
-.imgcentralizada {
-    margin: auto;
+.copyright {
+    color: white;
+    font-size: 15px;
+    margin: 30px;
 }
+
