--- a/style.css
+++ b/style.css
@@ -4,14 +4,8 @@ body {
 #banner {
 	width: 100%;
 }
-.centralizado {
-	text-align: center;
-}
 p {
 	text-align: center;
-}
-#missao {
-	font-size: 20px;
 }
 em strong {
 	color: #FF0000;
@@ -20,42 +14,54 @@ em strong {
 	font-style: italic;
 }
 .principal {
-	background: url("banner.jpg");
-	padding: 30px;	
+    background: url("banner.jpg");
+}	
+#banner {
+    width: 100%;
 }
 .principal h2 {	
-	background-color: white;
+    padding-top: 20px;
+	background: rgba(202, 202, 202, 0.5);
 	color: black;
+    font-size: 25px;
+    text-align: center;
+    margin-right: 100px;
+    margin-left: 100px;
+    
 }
 .principal p {	
-	background: white;
+	background: rgba(202, 202, 202, 0.5);
 	color: black;
+    font-size: 20px;
+    padding: 20px 0;
+    margin-right:100px;
+    margin-left: 100px;
 }
+
 .beneficios {
 	background: #757575;
 }
 .beneficios h3 {
 	font-size: 30px;
-	padding: 50px 0 0 200px;
+	padding: 80px 0 0 150px;
 }
 #imgbeneficios {
-	width: 50%;
+    margin-top: -110px;
+	width: 70%;
 }
 .lista-beneficios {
 	display: inline-block;
 	vertical-align: top;
 	font-size: 20px;
 	width: 20%;
-	margin: 50px 0 50px 200px;
+	margin: 50px 0 50px 150px;
 }
-.titulo-principal {
-	padding: 20px;
-}
+
 
 
 header {
     background: #a1a1a1f1;
-    padding: 20px 0;
+    padding: 20px 0 0 0;
 }
 .caixa-topo {
     position: relative;
