--- a/style.css
+++ b/style.css
@@ -1,67 +1,9 @@
 body {
 	font-family: Arial, Helvetica, sans-serif
 }
-#banner {
-	width: 100%;
-}
-p {
-	text-align: center;
-}
-em strong {
-	color: #FF0000;
-}
-.itens {
-	font-style: italic;
-}
-.principal {
-    background: url("banner.jpg");
-}	
-#banner {
-    width: 100%;
-}
-.principal h2 {	
-    padding-top: 20px;
-	background: rgba(202, 202, 202, 0.5);
-	color: black;
-    font-size: 25px;
-    text-align: center;
-    margin-right: 100px;
-    margin-left: 100px;
-    
-}
-.principal p {	
-	background: rgba(202, 202, 202, 0.5);
-	color: black;
-    font-size: 20px;
-    padding: 20px 0;
-    margin-right:100px;
-    margin-left: 100px;
-}
-
-.beneficios {
-	background: #757575;
-}
-.beneficios h3 {
-	font-size: 30px;
-	padding: 80px 0 0 150px;
-}
-#imgbeneficios {
-    margin-top: -110px;
-	width: 70%;
-}
-.lista-beneficios {
-	display: inline-block;
-	vertical-align: top;
-	font-size: 20px;
-	width: 20%;
-	margin: 50px 0 50px 150px;
-}
-
-
-
 header {
     background: #a1a1a1f1;
-    padding: 20px 0 0 0;
+    padding: 20px 0;
 }
 .caixa-topo {
     position: relative;
@@ -88,6 +30,44 @@ nav a:hover {
     color: #ff7920fd;
     text-decoration: underline;
 }
+.produtos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    background: #ffffff;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+.produtos li:hover {
+    border-color: #ff7920fd;
+}
+.produtos li:hover h2 {
+    font-size: 32px;
+}
+.produtos li:active {
+    color: #6b6b6bfd;
+}
+.produtos h2 {
+    font-size: 30px;
+    font-style: bold;
+}
+.produtos {
+    width: 940px;
+    margin: auto;
+    padding: 50px 0;
+}
+.produto-descricao {
+    font-size: 18px;
+}
+.produto-preco {
+    font-size: 22px;
+    font-style: bold;
+    margin: 10px 0 0;
+}
 footer {
     text-align: center;
     background: url("bg.jpg");
@@ -98,3 +78,57 @@ footer {
     font-size: 15px;
     margin: 30px;
 }
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+.checkbox {
+    margin: 20px 0;
+}
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: #ff9a57fd;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+.enviar:hover {
+    background: #f76300fd;
+    transform: scale(1.1);
+}
+
+table {
+    margin: 40px 0 40px;
+}
+thead {
+    background: grey;
+    font-weight: bold;
+    color: white;
+}
+td, th {
+    border: 1px solid black;
+    padding: 8px 15px;
+}
+
+
